<resources>
    <string name="app_name">AOCP Settings</string>
    <string name="user_interface">User Interface</string>
    <string name="general_ui">General UI</string>
    <string name="lockscreen_options">Lockscreen options</string>
    <string name="power_menu_optons">Power menu options</string>
    <string name="functionality">Functionality</string>
    <string name="power_saver">Power saver</string>
    <string name="led_options">LED options</string>
    <string name="statusbar">Statusbar</string>
    <string name="general">General</string>
    <string name="toggles_layout">Toggles</string>
    <string name="clock">Clock</string>
    <string name="battery">Battery</string>
    <string name="nav_bar">Navigation bar</string>
    <string name="tools">Tools</string>
    <string name="weather">Weather</string>
    <string name="signal">Signal</string>
    <string name="header_summary_battery">Battery bar, 1% battery mod, etc</string>
    <string name="header_summary_general_ui">Boot animation, bug mailer, rotation, IME switcher, etc</string>
    <string name="header_summary_navigation_bar">Buttons to display, nav bar color, order</string>
    <string name="header_summary_lockscreens">Custom apps to launch, layout</string>
    <string name="header_summary_power_menu">What to display in your power menu</string>
    <string name="header_summary_powersaver">Automatically disable data to save battery</string>
    <string name="header_summary_led">Change default settings for Android to use</string>
    <string name="header_summary_general">Settings button behavior</string>
    <string name="header_summary_toggles">Customize toggles</string>
	<string name="header_summary_clock">Clock location, AM/PM style, color</string>
	<string name="header_summary_weather">Enable/disable, set custom location or network, and interval</string>
	<string name="header_summary_signal">Signal dBm text</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="misc_short">Misc</string>
    <string name="menu_lockscreens_remove_wallpaper">Reset lockscreen wallpaper</string>
    <string name="menu_main_activity_change_locale">Locale</string>
    <string name="menu_nav_bar_reset">Reset nav bar</string>
    <string name="menu_weather_get_weather">Get weather</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="title_pref_menu_display">Menu location</string>
    <string name="summary_pref_menu_display">Remember to remove your menu buttons if you\'re using the big menu button!</string>
    <string name="navigation_bar">Navigation bar</string>
    <string name="navigation_bar_tint_title">Navigation bar color</string>
    <string name="navigation_bar_glow_tint_title">Navigation bar glow color</string>
    <string name="navigation_bar_glow_tint_summary">When you press on a button, there is a glow. Use this to change the color of the glow.</string>
    <string name="navigation_bar_height_title">Navigation bar height</string>
    <string name="navigation_bar_width_title">Navigation bar width</string>
    <string name="navigation_bar_add_new_widget_title">Add new widget</string>
    <string name="navigation_bar_add_new_widget_summary">Press to add another widget</string>
    <string name="navigation_bar_widget">"Widget "</string>
    <string name="title_pref_navigation_menu_display">Menu visibility</string>
    <string name="summary_pref_navigation_menu_display">How and when do you want the menu buttons to appear?</string>
    <string name="navbar_order_title">Navigation button order</string>
    <string name="navbar_order_summary">Customize the order of your soft keys</string>
    <string name="navbar_button_cat">Navigation bar buttons</string>
    <string name="navbar_qty_title">Navigation button quantity</string>
    <string name="navbar_qty_summary">Choose the number of navigation buttons</string>
    <string name="enabled_navbar_buttons_title">Enabled buttons</string>
    <string name="enabled_navbar_buttons_summary">Choose which soft keys you would like to see</string>
    <string name="navbar_action_title">Button %1$s action &amp; icon</string>
    <string name="navbar_longpress_title">Button %1$s longpress action</string>
    <string name="navbar_action_home">Home</string>
    <string name="navbar_action_back">Back</string>
    <string name="navbar_action_recents">Recents</string>
    <string name="navbar_action_search">Search</string>
    <string name="navbar_action_menu">Menu</string>
    <string name="navbar_action_kill">Kill task</string>
    <string name="navbar_action_power">Power</string>
    <string name="navbar_action_none">Empty</string>
	<string name="navbar_enable_bar">Enable bar</string>
	<string name="navbar_widgets">Navigation Bar Widgets</string>
	<string name="navbar_widgets_reset">Reset navbar widgets</string>
    <string name="navbar_enable_dialog_title">Reboot required!</string>
    <string name="navbar_enable_dialog_msg">Please reboot to enable/disable the navigation bar properly!</string>
    <string name="navbar_enable_dialog_negative">I\'ll reboot later</string>
    <string name="navbar_enable_dialog_Positive">Reboot now!</string>
    <string name="button_transparency_title">Nav button transparency</string>
    <string name="long_press_home_title">Long press home action</string>
    <string name="long_press_home_summary">What to do when long pressing the home softkey. Reboot required to reflect changes.</string>
    <string name="glow_times_title">Button glow animation</string>
    <string name="glow_times_off">Off</string>
    <string name="glow_times_superquick">Super quick</string>
    <string name="glow_times_quick">Quick</string>
    <string name="glow_times_normal">Normal</string>
    <string name="combined_bar_title">Combined Bar</string>
    <string name="combined_bar_auto_hide_title">Auto Hide</string>
    <string name="combined_bar_auto_hide_summary">Allow Combined Bar to hide when showing a fullscreen app</string>
    <string name="rotation_animation_delay_title">Rotation delay</string>
    <string name="rotation_animation_delay_summary">The number of milliseconds for which the device posture must be stable before an orientation change occurs. 200 ms default.</string>
	<string name="ime_switcher_title">Show IME Switcher</string>
	<string name="ime_switcher_summary">In statusbar, while typing</string>
	<string name="custom_carrier_label_title">Custom carrier label</string>
	<string name="custom_carrier_label_empty">Please enter a new one!</string>
	<string name="custom_carrier_label_warning">Custom label currently not set. Once you specify a custom one, there is no way back without doing a data wipe</string>
	<string name="longpress_to_kill_title">Hold back to kill</string>
	<string name="longpress_to_kill_summary">Holding back will kill the current activity</string>
    <string name="enable_volume_options">Enable Volume Options</string>
    <string name="less_notification_sounds_title">Less Frequent Notification Sounds</string>
    <string name="less_notification_sounds_summary">Limit each app\'s notification sounds to play once per the set value</string>
	<string name="rotate_180_title">Allow 180° rotation</string>
	<string name="rotate_180_summary">Allow your device to rotate upside down!</string>
	<string name="recent_app_switcher_title">Recents window style</string>
	<string name="recent_app_switcher_summary">Change the recents window style (requires UI restart)</string>
	<string name="disable_bootanimation_title">Disable boot animation</string>
	<string name="disable_bootanimation_summary">Jerk.</string>
	<string name="disable_bootaudio_title">Disable boot audio</string>
	<string name="disable_bootaudio_summary">Quiet.</string>
	<string name="disable_bootaudio_summary_disabled">To enable boot audio, you must have an MP3 file at \n/system/media/boot_audio.mp3</string>
	<string name="disable_bugmailer_title">Disable bugmailer</string>
	<string name="lcd_density_title">LCD Density</string>
	<string name="lcd_density_summary">unknown</string>
	<string name="crt_animations_header">CRT animations</string>
	<string name="crt_on_title">CRT on animation</string>
	<string name="crt_off_title">CRT off animation</string>
	<string name="current_lcd_density">"Current LCD Density: "</string>
	<string name="lcd_density_wizard">LCD Density Wizard</string>
	<string name="follow_through_title">Follow through!</string>
	<string name="follow_through_summary">Make sure you follow the steps one-by-one and complete each one before proceeding to the next.</string>
	<string name="stock_density_title">1. Change LCD Density to stock value</string>
	<string name="stock_density_summary">Tablets and older phones use 160. Most phones use 240. Galaxy Nexus uses 320 by default.</string>
	<string name="stock_density_changed_summary">"Density set to: "</string>
	<string name="reboot_title">2. Reboot!</string>
	<string name="reboot_summary">Come back here after the reboot and complete the rest of the steps!</string>
	<string name="clear_market_data_title">3. Clear market data</string>
	<string name="clear_market_data_cleared">Market data cleared</string>
	<string name="clear_market_data_donot_cleared">"Market data couldn't be cleared, please clear it yourself!"</string>
	<string name="open_market_title">4. Open Market and hit accept</string>
	<string name="open_market_summary">Press back when done to return here.</string>
	<string name="open_market_summary_could_not_open">"Couldn't open the market! If you're sure it's installed, open it yourself from the launcher."</string>
	<string name="custom_density_title">5. Change density to whatever you like!</string>
	<string name="custom_density_summary">If you ever have compatibility issues with the market, be sure to return here and repeat the process.</string>
	<string name="custom_density_summary_invalid">"INVALID DENSITY!"</string>
	<string name="profile_johnsondr80">http://forum.xda-developers.com/member.php?u=3314129</string>
	<string name="profile_ruger94">http://forum.xda-developers.com/member.php?u=3716027</string>
	<string name="profile_fezzy102">http://forum.xda-developers.com/member.php?u=3199956</string>
	<string name="profile_danarki">http://forum.xda-developers.com/member.php?u=4023855</string>
	<string name="profile_boog">http://forum.xda-developers.com/member.php?u=983346</string>
	<string name="profile_crt60">http://forum.xda-developers.com/member.php?u=813691</string>
	<string name="profile_dman3285">http://forum.xda-developers.com/member.php?u=2879389</string>
	<string name="profile_robm1911">http://forum.xda-developers.com/member.php?u=3232214</string>
	<string name="profile_mortem_taum">http://forum.xda-developers.com/member.php?u=3595808</string>
	<string name="profile_silverwrx03">http://forum.xda-developers.com/member.php?u=3570900</string>
	<string name="profile_kingmurry">http://forum.xda-developers.com/member.php?u=3509434</string>
	<string name="profile_ee23hd2">http://forum.xda-developers.com/member.php?u=2535093</string>
	<string name="profile_plexicle">http://forum.xda-developers.com/member.php?u=4493228</string>
	<string name="profile_kornklown69">http://forum.xda-developers.com/member.php?u=3534303</string>
	<string name="devs">Developers in order of collection</string>
	<string name="collective">Android Open Collective Project</string>
	<string name="collective_website_title">COLLECTIVE Website</string>
	<string name="collective_website_summary">www.????.org - Find all newest releases here. Still under construction</string>
	<string name="collective_source_title">COLLECTIVE Source</string>
	<string name="collective_source_summary">COLLECTIVE is fully open source. You can always check out the latest source at github.com/xAOCPx</string>
    <string name="collective_gplus_title">Join us on Google Plus</string>
    <string name="collective_gplus_summary">https://plus.google.com/118410901028408865706/posts</string>
</resources>